// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LabelWithPercent /> matches snapshot with isActive=true 1`] = `
"
<div class=\\"d-inline-block mw-100\\">
  <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover mb-0 ps-0 text-start\\">
    <span class=\\"me-1 px-1 bg-primary text-white components-labelWithPercent-percent\\">
      25
    </span>
    <span>
      <span class=\\"components-label-value\\">
        bar
      </span>
    </span>
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"xmark\\"
      class=\\"svg-inline--fa fa-xmark cursor-pointer text-reset ms-1\\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 320 512\\"
      style=\\"font-size: 100%;\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z\\"
      >
      </path>
    </svg>
  </span>
  <div class=\\"progress components-labelWithPercent-progress me-1\\">
    <div
      class=\\"progress-bar bg-warning\\"
      role=\\"progressbar\\"
      style=\\"width: 50%;\\"
      aria-valuenow=\\"50\\"
      aria-valuemin=\\"0\\"
      aria-valuemax=\\"100\\"
    >
    </div>
  </div>
</div>
"
`;

exports[`<LabelWithPercent /> matches snapshot with offset=0 1`] = `
"
<div class=\\"d-inline-block mw-100\\">
  <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover mb-0 ps-0 text-start\\">
    <span class=\\"me-1 px-1 bg-primary text-white components-labelWithPercent-percent\\">
      25
    </span>
    <span>
      <span class=\\"components-label-value\\">
        bar
      </span>
    </span>
  </span>
  <div class=\\"progress components-labelWithPercent-progress me-1\\">
    <div
      class=\\"progress-bar bg-warning\\"
      role=\\"progressbar\\"
      style=\\"width: 50%;\\"
      aria-valuenow=\\"50\\"
      aria-valuemin=\\"0\\"
      aria-valuemax=\\"100\\"
    >
    </div>
  </div>
</div>
"
`;

exports[`<LabelWithPercent /> matches snapshot with offset=25 1`] = `
"
<div class=\\"d-inline-block mw-100\\">
  <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover mb-0 ps-0 text-start\\">
    <span class=\\"me-1 px-1 bg-primary text-white components-labelWithPercent-percent\\">
      25
    </span>
    <span>
      <span class=\\"components-label-value\\">
        bar
      </span>
    </span>
  </span>
  <div class=\\"progress components-labelWithPercent-progress me-1\\">
    <div
      class=\\"progress-bar bg-transparent\\"
      role=\\"progressbar\\"
      style=\\"width: 25%;\\"
      aria-valuenow=\\"25\\"
      aria-valuemin=\\"0\\"
      aria-valuemax=\\"100\\"
    >
    </div>
    <div
      class=\\"progress-bar bg-warning\\"
      role=\\"progressbar\\"
      style=\\"width: 50%;\\"
      aria-valuenow=\\"50\\"
      aria-valuemin=\\"0\\"
      aria-valuemax=\\"100\\"
    >
    </div>
  </div>
</div>
"
`;
